--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Pomelo Admin Console Web</title>
+		<title>王者棋牌WEB监控</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="/ext-4.0.7-gpl/resources/css/ext-all.css"></>
 	</head>
